--- a/index.html
+++ b/index.html
@@ -1,13 +1,12 @@
-
 <!DOCTYPE html>
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Fahad khan</title>
+	<title>Deepraj chawda</title>
 	<link rel="stylesheet" href="test_css.css">
 </head>
 <body>
-	
+	<h2 id=top>Fahad Khan</h2>
 
 	<div class="row">
 		<div class="box1">
@@ -38,22 +37,18 @@ Sass strings are 1-based. The first character in a string is at index 1, not 0.<
 
 		</div>
 
-		<div class="box3">
-			<div class="inbox3">
-			</div>
-			<div class="inbox3">
-			</div>
 
-			<div class="inbox3">
-			</div>
-			<div class="inbox3">
-			</div>
-		</div>
-
+<div id="container">
+  <div class="top left"></div>
+  <div class="top right"></div>
+  <div class="bottom left"></div>
+  <div class="bottom right"></div>
+</div>
 
 	</div>
 
-	<div class="button">
+	<div style="text-align: right;background-color: green;
+   position: fixed;">
 	<a href="#top"><button>GO TO TOP</button></a>
 	</div>
 </body>
