--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Deepraj chawda</title>
+	<title>Fahad Khan</title>
 	<link rel="stylesheet" href="test_css.css">
 </head>
 <body>
