--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -6,7 +7,7 @@
 	<link rel="stylesheet" href="test_css.css">
 </head>
 <body>
-	<h2 id=top>Fahad Khan</h2>
+	
 
 	<div class="row">
 		<div class="box1">
@@ -37,18 +38,22 @@ Sass strings are 1-based. The first character in a string is at index 1, not 0.<
 
 		</div>
 
+		<div class="box3">
+			<div class="inbox3">
+			</div>
+			<div class="inbox3">
+			</div>
 
-<div id="container">
-  <div class="top left"></div>
-  <div class="top right"></div>
-  <div class="bottom left"></div>
-  <div class="bottom right"></div>
-</div>
+			<div class="inbox3">
+			</div>
+			<div class="inbox3">
+			</div>
+		</div>
+
 
 	</div>
 
-	<div style="text-align: right;background-color: green;
-   position: fixed;">
+	<div class="button">
 	<a href="#top"><button>GO TO TOP</button></a>
 	</div>
 </body>
